@@ -1,4 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+Wrote: html/index.html. 
+/W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
 <head>
@@ -1898,7 +1899,7 @@ Output file 88: html/90.try.svg (5309 bytes)
 
 <table align="center">
 	<tr>
-		<td>Last updated</td><td>2012-10-16 10:32:56</td>
+		<td>Last updated</td><td>2012-10-16 11:15:00</td>
 	</tr>
 	<tr>
 		<td align="center" colspan="2"><a href="http://savage.net.au/">Ron's Home page</td>
